# scenemax3d-desktop

./: .gitignore  LICENSE  README.md  build.gradle  config.properties.example  settings.gradle
.github/: FUNDING.yml
.github/workflows/: effekseer-native-desktop.yml
INNO-SETUP/: README.md  build-installer.ps1  build-linux-package.sh  build-macos-package.sh  create-dev-code-signing-cert.ps1
assets/code_templates/: csharp_new_class  csharp_new_replay_class  import_model_test_program
assets/menu/: main_menu
docs/: README.md  animation.md  arrays.md  audio.md  built-in-mcp-server.md  camera-systems.md  camera.md  collisions-and-physics.md  control-flow.md  effects.md  effekseer-particle-designer.md  events-and-input.md  itchio-integration.md  levels-and-shared-state.md  lighting.md  mcp-tools-reference.md  minimap.md  movement-and-rotation.md  objects-and-models.md  path-replay.md  procedures.md  screen-and-canvas.md  sprites.md  ui-and-drawing.md  utilities.md  variables-and-data-types.md
plugins/: index.json
projects/: projects.json  readme.md
projects/fighting_game_project/scripts/Fighting Game/: __check_opponent_hit  __opponent_hit  boss_ai  collision  collision_new  enemy_ai  enemy_knockout  loading  main  test_designer.code  (+3 more)
resources-basic/resources/Models/: models.json
resources-basic/resources/audio/: audio.json
resources-basic/resources/fonts/: Arial.fnt  ArialBlack.fnt  fonts.json  game1.fnt  geomarice.fnt  iomanoid.fnt  pack.fnt  palamecia.fnt  xeno.fnt  yoshi.fnt
resources-basic/resources/skyboxes/: skyboxes.json
resources-basic/resources/sprites/: sprites.json
resources-basic/resources/terrain/: terrains.json
scenemax3d_common_types/: build.gradle  settings.gradle
scenemax3d_compiler/: build.gradle  settings.gradle
scenemax3d_parser/: SceneMax.g4  build.bat
scenemax3d_plugins/: build.gradle
scenemax3d_plugins_ide/: build.gradle
scenemax3d_plugins_ide/assets/: new_game_template.json  partial_sentence_reactions.json
scenemax_designer/: build.gradle
scenemax_designer/assets/MatDefs/: EffekseerAdditiveSprite.frag  EffekseerAdditiveSprite.j3md  EffekseerAdditiveSprite.vert
scenemax_designer/native/effekseer_bridge/: CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  scenemax_effekseer_jni.cpp
scenemax_effekseer_runtime/: build.gradle
scenemax_effekseer_runtime/assets/native/: README.md
scenemax_server/: app.js
scenemax_win_projector/: build.gradle
scenemax_win_projector/assets/Interface/: add_resource_window.xml  console_window.xml  nifty-console-style.xml  textfield.xml
scenemax_win_projector/assets/MatDefs/: sprite_sheet.frag  sprite_sheet.j3md  sprite_sheet.vert  sprite_sheet2.frag  sprite_sheet2.j3md  sprite_sheet2.vert
(+645 files in other folders)
